# sensuser

./: .mailmap  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  autogen.sh  config.h.in  configure  configure.ac  configure~  layer.cpp  layer.h  libtool  losscurvewidget.cpp  losscurvewidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mlp.cpp  mlp.h  moc_losscurvewidget.cpp  moc_mainwindow.cpp  moc_trainingworker.cpp  qmake_qmake_qm_files.qrc  qrc_qmake_qmake_qm_files.cpp  sensuser.pro  test_model_size  test_model_size.cpp  test_model_size.pro  trainingworker.cpp  trainingworker.h
autom4te.cache/: output.0  output.2  requests  traces.0  traces.2
sensuser.app.dSYM/Contents/: Info.plist
sensuser.app/Contents/: Info.plist
sensuser.app/Contents/MacOS/: sensuser
