AC_INIT([sensuser], [1.0], [info@example.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CXX
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIRS([m4])

# Check for required libraries
AC_CHECK_HEADERS([stdio.h stdlib.h string.h])

# Configure files to generate
AC_CONFIG_FILES([
 Makefile
])

AC_OUTPUT
